UI: Fixed copy icon alignment in RTL languages
Fixes #5963

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -1711,7 +1711,7 @@ a.language:hover {
   left: 55px;
 }
 .dir-rtl .btn-sidebar {
-  right: 55px;
+  left: -55px;
 }
 .sidebar-button {
   margin-right: 30px;
